url complet change

--- a/.env
+++ b/.env
@@ -2,7 +2,9 @@ NODE_ENV=production
 # FRONTEND_URL=https://4kdesigns-mada.com
 FRONTEND_URL=https://4kfront.vercel.app
 # DB_HOST=mysql26.lws-hosting.com
-DB_HOST=mysql://4kdes2233711:nuvubggcgl@185.98.131.161:3306/4kdes2233711?ssl=true
+# DB_HOST=mysql://4kdes2233711:nuvubggcgl@185.98.131.161:3306/4kdes2233711?ssl=true
+DB_HOST=185.98.131.161
+
 DB_USER=4kdes2233711
 DB_PASSWORD=nuvubggcgl
 DB_NAME=4kdes2233711
