--- a/.env
+++ b/.env
@@ -20,11 +20,21 @@
 # DB_PORT=3306
 # PORT=5000
 
+# NODE_ENV=development
+# FRONTEND_URL=https://4kfront.vercel.app
+# DB_HOST=crossover.proxy.rlwy.net
+# DB_USER=root
+# DB_PASSWORD=vvTgADCsyZtOuVobpBQaiPvkgKeAwKTq
+# DB_NAME=railway
+# DB_PORT=23553
+# PORT=5000
+
+
 NODE_ENV=development
 FRONTEND_URL=https://4kfront.vercel.app
-DB_HOST=crossover.proxy.rlwy.net
+DB_HOST=mysql.railway.internal
 DB_USER=root
 DB_PASSWORD=vvTgADCsyZtOuVobpBQaiPvkgKeAwKTq
 DB_NAME=railway
-DB_PORT=23553
+DB_PORT=3306
 PORT=5000
