--- a/.env
+++ b/.env
@@ -1,3 +1,34 @@
+# NODE_ENV=production
+# # FRONTEND_URL=https://4kdesigns-mada.com
+# FRONTEND_URL=https://4kfront.vercel.app
+# # DB_HOST=mysql26.lws-hosting.com
+# # DB_HOST=mysql://4kdes2233711:nuvubggcgl@185.98.131.161:3306/4kdes2233711?ssl=true
+# DB_HOST=185.98.131.161
+
+# DB_USER=4kdes2233711
+# DB_PASSWORD=nuvubggcgl
+# DB_NAME=4kdes2233711
+# DB_PORT=3306
+# PORT=5000
+
+# NODE_ENV=development
+# FRONTEND_URL=http://localhost:3000
+# DB_HOST=localhost
+# DB_USER=root
+# DB_PASSWORD=
+# DB_NAME=gestion_facture
+# DB_PORT=3306
+# PORT=5000
+
+# NODE_ENV=development
+# FRONTEND_URL=https://4kfront.vercel.app
+# DB_HOST=crossover.proxy.rlwy.net
+# DB_USER=root
+# DB_PASSWORD=vvTgADCsyZtOuVobpBQaiPvkgKeAwKTq
+# DB_NAME=railway
+# DB_PORT=23553
+# PORT=5000
+
 
 NODE_ENV=development
 FRONTEND_URL=https://4kfront.vercel.app
