--- a/.env
+++ b/.env
@@ -30,11 +30,20 @@
 # PORT=5000
 
 
+# NODE_ENV=development
+# FRONTEND_URL=https://4kfront.vercel.app
+# DB_HOST=mysql.railway.internal
+# DB_USER=root
+# DB_PASSWORD=vvTgADCsyZtOuVobpBQaiPvkgKeAwKTq
+# DB_NAME=railway
+# DB_PORT=3306
+# PORT=5000
+
 NODE_ENV=development
 FRONTEND_URL=https://4kfront.vercel.app
-DB_HOST=mysql.railway.internal
+DB_HOST=crossover.proxy.rlwy.net
 DB_USER=root
 DB_PASSWORD=vvTgADCsyZtOuVobpBQaiPvkgKeAwKTq
 DB_NAME=railway
-DB_PORT=3306
+DB_PORT=23553
 PORT=5000
