--- a/.env
+++ b/.env
@@ -39,7 +39,7 @@
 # DB_PORT=3306
 # PORT=5000
 
-NODE_ENV=development
+NODE_ENV=production
 FRONTEND_URL=https://4kfront.vercel.app
 DB_HOST=crossover.proxy.rlwy.net
 DB_USER=root
